# openttd-remote-control

./: .clang-format  .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.cached  Dockerfile.dockerignore  README.md  docker-compose.gplv3.yml  docker-compose.yml  pixi.toml  pyproject.toml
.github/workflows/: import-bundle.yml
cmake/: OttdProtobufLite.cmake
cmake/scripts/: FindVersion.cmake
contrib/content/scenario/: example-no-script.scn  example.scn
contrib/grpc_server/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  call_base.h  grpc_server_services.cpp  grpc_server_services.h  main.cpp  pending_deferred_calls.cpp  pending_deferred_calls.h  pixi.toml  plugin_interface.h  script_goal_new_call.h  wait_for_uds.sh
contrib/grpc_server/proto/: abi_internal.proto  admin.proto  console.proto  script_company.proto  script_generic.proto
contrib/libottd_grpc_server/: CMakeLists.txt  README.md  call_base.h  grpc_server_plugin.cpp  grpc_server_services.cpp  grpc_server_services.h
contrib/libottd_grpc_server/proto/: script_map.proto
contrib/libottd_rpc_example/: CMakeLists.txt  README.md  example_plugin.cpp  plugin_interface.h
contrib/libottd_rpc_example/proto/: admin.proto
contrib/libottd_uds_bridge/: CMakeLists.txt  README.md  plugin_interface.h  uds_bridge_plugin.cpp  uds_bridge_server.cpp  uds_bridge_server.hpp
contrib/ottd_uds_ipc/: CMakeLists.txt  ipc_protocol.hpp
contrib/python_controller/: .dockerignore  Dockerfile  README.md  main.py  manage.sh  pyproject.toml
contrib/python_controller/controller/: generate_proto_models.py  grpc_client_test.py  grpc_services.py
contrib/python_controller/controller/company_value_goal/: README.md  server.py  storage.py
contrib/python_controller/grpc_gen/admin/openttd/: __init__.py
contrib/python_controller/grpc_gen/console/openttd/: __init__.py
contrib/python_controller/grpc_gen/script_company/openttd/: __init__.py
contrib/python_controller/grpc_gen/script_generic/openttd/: __init__.py
contrib/python_controller/grpc_gen/script_goal/openttd/: __init__.py
contrib/python_controller/grpc_gen/script_map/openttd/: __init__.py
contrib/python_controller/grpc_protos/: script_generic.proto  script_goal.proto
contrib/utils/: LICENSE  cache_build_util.sh
gplv3_version/: Dockerfile  pixi.toml
src/: CMakeLists.txt  console_cmds.cpp  genworld.cpp  openttd.cpp  openttd.h  settings.cpp  settings_func.h
src/controllers/: reset_company_controller.h  restart_game_controller.h
src/game/: game.hpp  game_core.cpp
src/network/: network_admin.cpp
src/network/core/: network_game_info.cpp  network_game_info.h
src/saveload/: afterload.cpp
src/script/: script_instance.cpp  script_instance.hpp  script_storage.hpp  squirrel.cpp
src/script/api/: script_object.cpp  script_object.hpp
src/settingsgen/: CMakeLists.txt
src/strgen/: CMakeLists.txt
src/video/: dedicated_v.cpp
