[project]
name = "openttd-python-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "betterproto[compiler] @ git+https://github.com/danielgtaylor/python-betterproto@v2.0.0b7",
    "dishka>=1.10.1",
    "ipython>=9.7.0",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pydantic>=2.12.4",
    "sqlalchemy[asyncio]>=2.0.49",
    "aiosqlite>=0.21.0",
]

[tool.mypy]
# Specify the target Python version for your project
python_version = "3.12"

# Enable strict mode. This is the industry standard for new projects.
# It encompasses disallow_untyped_defs, check_untyped_defs, warn_return_any, etc.
strict = true

# Catch unreachable code or redundant actions
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

# Improve developer experience (DX) in the terminal
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude specific directories (e.g., environments, caches, migrations)
exclude = [
    "^\\.venv/",
    "^venv/",
    "^\\.mypy_cache/",
    "^tests/", # Optional: Remove if you want strictly typed tests
]

# -----------------------------------------------------------------------------
# Module-specific overrides
# Use this section to suppress errors from third-party libraries that
# still lack type hints (stubs) or PEP 561 compliance.
# -----------------------------------------------------------------------------

# Generated protobuf / betterproto output — keep strict typing in application code only.
[[tool.mypy.overrides]]
module = "grpc_gen.*"
ignore_errors = true

[tool.uv.sources]
betterproto = { git = "https://github.com/danielgtaylor/python-betterproto/", rev = "v.2.0.0b7" }
